--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
    <div id="redoc-ui"> <!-- Div to hold the UI component -->
-    <redoc id="redoc" spec-url='swagger.yaml'></redoc>
+    <redoc id="redoc" spec-url='swagger.yml'></redoc>
    </div>	  
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"> </script>
   </body>
