--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
 
 
-      const doc = "swagger.yaml";
+      const doc = "swagger.yml";
 
       window.document.title += doc;
       window.onload = function () {
